; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/bluetooth/nimble/blecent/main/extr_main.c_blecent_on_disc_complete.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/bluetooth/nimble/blecent/main/extr_main.c_blecent_on_disc_complete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.peer = type { i32 }

@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [59 x i8] c"Error: Service discovery failed; status=%d conn_handle=%d\0A\00", align 1
@BLE_ERR_REM_USER_CONN_TERM = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [54 x i8] c"Service discovery complete; status=%d conn_handle=%d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.peer*, i32, i8*)* @blecent_on_disc_complete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @blecent_on_disc_complete(%struct.peer* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.peer*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store %struct.peer* %0, %struct.peer** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %7 = load i32, i32* %5, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %21

9:                                                ; preds = %3
  %10 = load i32, i32* @ERROR, align 4
  %11 = load i32, i32* %5, align 4
  %12 = load %struct.peer*, %struct.peer** %4, align 8
  %13 = getelementptr inbounds %struct.peer, %struct.peer* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @MODLOG_DFLT(i32 %10, i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str, i64 0, i64 0), i32 %11, i32 %14)
  %16 = load %struct.peer*, %struct.peer** %4, align 8
  %17 = getelementptr inbounds %struct.peer, %struct.peer* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* @BLE_ERR_REM_USER_CONN_TERM, align 4
  %20 = call i32 @ble_gap_terminate(i32 %18, i32 %19)
  br label %30

21:                                               ; preds = %3
  %22 = load i32, i32* @ERROR, align 4
  %23 = load i32, i32* %5, align 4
  %24 = load %struct.peer*, %struct.peer** %4, align 8
  %25 = getelementptr inbounds %struct.peer, %struct.peer* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @MODLOG_DFLT(i32 %22, i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str.1, i64 0, i64 0), i32 %23, i32 %26)
  %28 = load %struct.peer*, %struct.peer** %4, align 8
  %29 = call i32 @blecent_read_write_subscribe(%struct.peer* %28)
  br label %30

30:                                               ; preds = %21, %9
  ret void
}

declare dso_local i32 @MODLOG_DFLT(i32, i8*, i32, i32) #1

declare dso_local i32 @ble_gap_terminate(i32, i32) #1

declare dso_local i32 @blecent_read_write_subscribe(%struct.peer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
